--- a/index.html
+++ b/index.html
@@ -86,6 +86,14 @@
 
 	<script src="js/jquery.js"></script>
 	<script src="js/menu.js"></script>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129145298-1"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
+	  gtag('config', 'UA-129145298-1');
+	</script>
 </body>
 
 </html>
