Contador de visitas

--- a/index.html
+++ b/index.html
@@ -79,6 +79,12 @@
 			</figure>
 		</article>
 	</section>
+	
+	<section id="contador">
+		<div id="sfc7us66b5bssl3hnxs86f7l1cuqsslsq1n"></div>
+<script type="text/javascript" src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=7us66b5bssl3hnxs86f7l1cuqsslsq1n&down=async" async></script>
+<noscript><a href="https://www.contadorvisitasgratis.com" title="contador gratis para blog"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=7us66b5bssl3hnxs86f7l1cuqsslsq1n" border="0" title="contador gratis para blog" alt="contador gratis para blog"></a></noscript>
+	</section>
 
 	<footer>
 		<h5>Diseño y desarrollo del sitio realizado por Jhonatan C. Hurtado - @jhonatandev</h5>
