--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href="#">Jhonatan<span class="dev">Dev</span></a></li>
+					<li><a href="index.html">Jhonatan<span class="dev">Dev</span></a></li>
 					<li><a href="#">Perfil y Portafolio</a></li>
-					<li><a href="#">Blog</a></li>
+					<li><a href="blog.html">Blog</a></li>
 				</ul>
 			</nav>			
 		</section>
