--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 		</article>
 	</section>
 	
-	<img src="http://www.codigos-qr.com/qr/php/qr_img.php?d=https%3A%2F%2Fwww.google.com%2F&s=8&e=q" alt="Generador de Códigos QR Codes"/>
+	<img src="http://www.codigos-qr.com/qr/php/qr_img.php?d=https%3A%2F%2Fjhonatanc.github.io%2Fportafolio%2Fblog.html&s=10&e=q" alt="Generador de Códigos QR Codes"/>
 	
 	<section id="contador">
 		<div id="sfc7us66b5bssl3hnxs86f7l1cuqsslsq1n"></div>
