--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 			</div>
 			<nav>
 				<ul>
-					<li><a href="#">Jhonatan<span class="dev">Dev</span></a></li>
+					<li><a href="index.html">Jhonatan<span class="dev">Dev</span></a></li>
 					<li><a href="#">Perfil y Portafolio</a></li>
-					<li><a href="#">Blog</a></li>
+					<li><a href="blog.html">Blog</a></li>
 				</ul>
 			</nav>			
 		</section>
@@ -44,14 +44,6 @@
 			<h2>Perfil Profesional</h2>
 			<p><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias doloribus facilis, fuga iure sapiente nisi ab enim, esse, vel eum voluptatum possimus at dignissimos necessitatibus! Optio vitae deleniti facilis! Ad.</span><span>Dolorem distinctio odit temporibus! Explicabo magnam recusandae obcaecati accusantium, nesciunt iusto voluptas temporibus minus error minima, quasi quo reprehenderit at eos animi esse necessitatibus? Repellendus praesentium provident, necessitatibus delectus voluptates!</span></p>
 		</article>
-		
-		<section id="contador">
-			<div id="sfc7us66b5bssl3hnxs86f7l1cuqsslsq1n"></div>
-			<script type="text/javascript" src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=7us66b5bssl3hnxs86f7l1cuqsslsq1n&down=async" async></script>
-		<noscript></noscript>
-		</section>
-		
-		<img src="http://www.codigos-qr.com/qr/php/qr_img.php?d=https%3A%2F%2Fwww.google.com%2F&s=8&e=q" alt="Generador de Códigos QR Codes"/>
 
 		<article class="trabajos">
 			<h2>Mis proyectos</h2>			
@@ -87,6 +79,14 @@
 			</figure>
 		</article>
 	</section>
+	
+	<img src="http://www.codigos-qr.com/qr/php/qr_img.php?d=https%3A%2F%2Fjhonatanc.github.io%2Fportafolio%2Fblog.html&s=10&e=q" alt="Generador de Códigos QR Codes"/>
+	
+	<section id="contador">
+		<div id="sfc7us66b5bssl3hnxs86f7l1cuqsslsq1n"></div>
+<script type="text/javascript" src="https://counter5.wheredoyoucomefrom.ovh/private/counter.js?c=7us66b5bssl3hnxs86f7l1cuqsslsq1n&down=async" async></script>
+<noscript><a href="https://www.contadorvisitasgratis.com" title="contador gratis para blog"><img src="https://counter5.wheredoyoucomefrom.ovh/private/contadorvisitasgratis.php?c=7us66b5bssl3hnxs86f7l1cuqsslsq1n" border="0" title="contador gratis para blog" alt="contador gratis para blog"></a></noscript>
+	</section>
 
 	<footer>
 		<h5>Diseño y desarrollo del sitio realizado por Jhonatan C. Hurtado - @jhonatandev</h5>
@@ -94,6 +94,7 @@
 
 	<script src="js/jquery.js"></script>
 	<script src="js/menu.js"></script>
+	
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-129145298-1"></script>
 	<script>
@@ -102,6 +103,7 @@
 	  gtag('js', new Date());
 	  gtag('config', 'UA-129145298-1');
 	</script>
+
 </body>
 
 </html>
