--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<ul>
 					<li><a href="index.html">Jhonatan<span class="dev">Dev</span></a></li>
 					<li><a href="#">Perfil y Portafolio</a></li>
-					<li><a href="blog.html">Blog</a></li>
+					<li><a href="portafolio/blog.html">Blog</a></li>
 				</ul>
 			</nav>			
 		</section>
